--- a/settings/index.html
+++ b/settings/index.html
@@ -28,7 +28,7 @@
         <h1>Settings ⚙</h1>
 
         <details open class="settings-options">
-            <summary><h2>Tab Cloacker</h2></summary>
+            <summary><h2>Tab Cloaker</h2></summary>
             <h3>Title</h3>
             <div class="settings-options-input">
                 <input type="text" placeholder="Classroom" value="Classroom" id="title">
