--- a/forums/index.html
+++ b/forums/index.html
@@ -8,23 +8,60 @@
     <title>NVSHS</title>
     <link rel="icon" href="" id="favicon">
 
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <script src="../index.js" defer></script>
 </head>
 
-<body>
-    <header class="header">
-        <h1 class="header-logo">
-            <span class="header-logo-yellow">n<span class="header-logo-green">v<span class="header-logo-blue">s<span class="header-logo-yellow">h<span class="header-logo-green">s<span class="header-logo-white">.github.io</span></span></span></span></span></span>
-        </h1>
-        <nav>
-            <a href="../">Home</a>
-            <a href="./">Forums</a>
-            <a href="../settings">Settings</a>
-        </nav>
-    </header>
-    <div class="main">
-        <h1>Nothing here yet 😭</h1>
+<body id="forums">
+    <div class="error">
+        <h1>Hey...</h1>
+        <p style="margin-top: 2em;">It looks like you're using a phone or tablet 📱. This website is not optimized for
+            mobile devices 😭, and may not work properly. If you want to use this website, please use a computer or
+            laptop 💻.</p>
+        <p style="margin-top: 1em;">Sorry for the inconvenience 😔.</p>
+        <p style="margin-top: 2em;">- <a href="https://github.com/what-question-mark">@what-question-mark</a> (Lead
+            Developer)</p>
+    </div>
+    <div class="body">
+        <header class="header">
+            <h1 class="header-logo">
+                <span class="header-logo-yellow">n<span class="header-logo-green">v<span class="header-logo-blue">s<span
+                                class="header-logo-yellow">h<span class="header-logo-green">s<span
+                                        class="header-logo-white">.github.io</span></span></span></span></span></span>
+            </h1>
+            <nav>
+                <a href="../">Home</a>
+                <a href="./">Forums</a>
+                <a href="../settings">Settings</a>
+            </nav>
+        </header>
+        <div class="main">
+            <div class="sidebar">
+                <div class="sidebar-channels">
+                    <h1>Channels</h1>
+                    <div class="sidebar-channels-list">
+                        <a href="">#General</a>
+                        <sub>More soon?</sub>
+                    </div>
+                </div>
+                <div class="sidebar-rules">
+                    <h1>Channel Rules</h1>
+                    <ol class="sidebar-rules-list">
+                        <li>Be respectful to others and their opinions.</li>
+                        <li>No hate speech or discriminatory language, including slurs.</li>
+                        <li>Swearing is allowed, but please avoid excessive use.</li>
+                        <li>Do not spam or advertise without permission.</li>
+                    </ol>
+                </div>
+            </div>
+            <div class="center">
+                <div class="center-create">
+                    <textarea maxlength="100" wrap="hard" placeholder="What's Happening?" id="forums-create-input"></textarea>
+                    <button type="submit">Send</button>
+                </div>
+                <div class="center-view"></div>
+            </div>
+        </div>
     </div>
 </body>
 
