--- a/index.html
+++ b/index.html
@@ -12,43 +12,56 @@
     <script src="./index.js" defer></script>
 </head>
 
-<body>
-    <header class="header">
-        <h1 class="header-logo">
-            <span class="header-logo-yellow">n<span class="header-logo-green">v<span class="header-logo-blue">s<span class="header-logo-yellow">h<span class="header-logo-green">s<span class="header-logo-white">.github.io</span></span></span></span></span></span>
-        </h1>
-        <nav>
-            <a href="./">Home</a>
-            <a href="./forums">Forums</a>
-            <a href="./settings">Settings</a>
-        </nav>
-    </header>
-    <div class="main">
-        <div class="main-vpns">
-            <div class="main-item">
-                <h2>VPN Example</h2>
+<body id="notForums">
+    <div class="error">
+        <h1>Hey...</h1>
+        <p style="margin-top: 2em;">It looks like you're using a phone or tablet 📱. This website is not optimized for
+            mobile devices 😭, and may not work properly. If you want to use this website, please use a computer or
+            laptop 💻.</p>
+        <p style="margin-top: 1em;">Sorry for the inconvenience 😔.</p>
+        <p style="margin-top: 2em;">- <a href="https://github.com/what-question-mark">@what-question-mark</a> (Lead
+            Developer)</p>
+    </div>
+    <div class="body">
+        <header class="header">
+            <h1 class="header-logo">
+                <span class="header-logo-yellow">n<span class="header-logo-green">v<span class="header-logo-blue">s<span
+                                class="header-logo-yellow">h<span class="header-logo-green">s<span
+                                        class="header-logo-white">.github.io</span></span></span></span></span></span>
+            </h1>
+            <nav>
+                <a href="./">Home</a>
+                <a href="./forums">Forums</a>
+                <a href="./settings">Settings</a>
+            </nav>
+        </header>
+        <div class="main">
+            <div class="main-vpns">
+                <div class="main-item">
+                    <h2>VPN Example</h2>
+                </div>
             </div>
-        </div>
-        <div class="main-links">
-            <div class="main-item">
-                <h2>Link Example</h2>                
+            <div class="main-links">
+                <div class="main-item">
+                    <h2>Link Example</h2>
+                </div>
             </div>
-        </div>
-        <div class="main-games">
-            <div class="main-item">
-                <h2>Game Example</h2>
-            </div>
-            <div class="main-item">
-                <h2>Game Example</h2>
-            </div>
-            <div class="main-item">
-                <h2>Game Example</h2>
-            </div>
-            <div class="main-item">
-                <h2>Game Example</h2>
-            </div>
-            <div class="main-item">
-                <h2>Game Example</h2>
+            <div class="main-games">
+                <div class="main-item">
+                    <h2>Game Example</h2>
+                </div>
+                <div class="main-item">
+                    <h2>Game Example</h2>
+                </div>
+                <div class="main-item">
+                    <h2>Game Example</h2>
+                </div>
+                <div class="main-item">
+                    <h2>Game Example</h2>
+                </div>
+                <div class="main-item">
+                    <h2>Game Example</h2>
+                </div>
             </div>
         </div>
     </div>
