--- a/settings/index.html
+++ b/settings/index.html
@@ -13,36 +13,52 @@
     <script src="../index.js" defer></script>
 </head>
 
-<body>
-    <header class="header">
-        <h1 class="header-logo">
-            <span class="header-logo-yellow">n<span class="header-logo-green">v<span class="header-logo-blue">s<span class="header-logo-yellow">h<span class="header-logo-green">s<span class="header-logo-white">.github.io</span></span></span></span></span></span>
-        </h1>
-        <nav>
-            <a href="../">Home</a>
-            <a href="../forums">Forums</a>
-            <a href="./settings">Settings</a>
-        </nav>
-    </header>
-    <div class="main">
-        <h1>Settings ⚙</h1>
+<body id="notForums">
+    <div class="error">
+        <h1>Hey...</h1>
+        <p style="margin-top: 2em;">It looks like you're using a phone or tablet 📱. This website is not optimized for
+            mobile devices 😭, and may not work properly. If you want to use this website, please use a computer or
+            laptop 💻.</p>
+        <p style="margin-top: 1em;">Sorry for the inconvenience 😔.</p>
+        <p style="margin-top: 2em;">- <a href="https://github.com/what-question-mark">@what-question-mark</a> (Lead
+            Developer)</p>
+    </div>
+    <div class="body">
+        <header class="header">
+            <h1 class="header-logo">
+                <span class="header-logo-yellow">n<span class="header-logo-green">v<span class="header-logo-blue">s<span
+                                class="header-logo-yellow">h<span class="header-logo-green">s<span
+                                        class="header-logo-white">.github.io</span></span></span></span></span></span>
+            </h1>
+            <nav>
+                <a href="../">Home</a>
+                <a href="../forums">Forums</a>
+                <a href="./settings">Settings</a>
+            </nav>
+        </header>
+        <div class="main">
+            <h1>Settings ⚙</h1>
 
-        <details open class="settings-options">
-            <summary><h2>Tab Cloaker</h2></summary>
-            <h3>Title</h3>
-            <div class="settings-options-input">
-                <input type="text" placeholder="Classroom" value="Classroom" id="title">
-            </div>
-            <h3>Icon URL</h3>
-            <div class="settings-options-input">
-                <input type="text" placeholder="Icon" value="https://ssl.gstatic.com/classroom/favicon.png" id="icon">
-            </div>
-            <div class="settings-options-buttons">
-                <button id="btnTitle" onclick="setTitle()">Set title</button>
-                <button id="btnIcon" onclick="setIcon()">Set Icon</button>
-                <button id="btnReset" onclick="reset()">Reset</button>
-            </div>
-        </details>
+            <details open class="settings-options">
+                <summary>
+                    <h2>Tab Cloaker</h2>
+                </summary>
+                <h3>Title</h3>
+                <div class="settings-options-input">
+                    <input type="text" placeholder="Classroom" value="Classroom" id="title">
+                </div>
+                <h3>Icon URL</h3>
+                <div class="settings-options-input">
+                    <input type="text" placeholder="Icon" value="https://ssl.gstatic.com/classroom/favicon.png"
+                        id="icon">
+                </div>
+                <div class="settings-options-buttons">
+                    <button id="btnTitle" onclick="setTitle()">Set title</button>
+                    <button id="btnIcon" onclick="setIcon()">Set Icon</button>
+                    <button id="btnReset" onclick="reset()">Reset</button>
+                </div>
+            </details>
+        </div>
     </div>
 </body>
 
