--- a/forums/index.html
+++ b/forums/index.html
@@ -12,7 +12,7 @@
     <script src="../index.js" defer></script>
 </head>
 
-<body id="forums">
+<body>
     <div class="error">
         <h1>Hey...</h1>
         <p style="margin-top: 2em;">It looks like you're using a phone or tablet 📱. This website is not optimized for
@@ -36,31 +36,7 @@
             </nav>
         </header>
         <div class="main">
-            <div class="sidebar">
-                <div class="sidebar-channels">
-                    <h1>Channels</h1>
-                    <div class="sidebar-channels-list">
-                        <a href="">#General</a>
-                        <sub>More soon?</sub>
-                    </div>
-                </div>
-                <div class="sidebar-rules">
-                    <h1>Channel Rules</h1>
-                    <ol class="sidebar-rules-list">
-                        <li>Be respectful to others and their opinions.</li>
-                        <li>No hate speech or discriminatory language, including slurs.</li>
-                        <li>Swearing is allowed, but please avoid excessive use.</li>
-                        <li>Do not spam or advertise without permission.</li>
-                    </ol>
-                </div>
-            </div>
-            <div class="center">
-                <div class="center-create">
-                    <textarea maxlength="100" wrap="hard" placeholder="What's Happening?" id="forums-create-input"></textarea>
-                    <button type="submit">Send</button>
-                </div>
-                <div class="center-view"></div>
-            </div>
+            <h1>Soon™</h1>
         </div>
     </div>
 </body>
