--- a/settings/index.html
+++ b/settings/index.html
@@ -13,7 +13,7 @@
     <script src="../index.js" defer></script>
 </head>
 
-<body id="notForums">
+<body>
     <div class="error">
         <h1>Hey...</h1>
         <p style="margin-top: 2em;">It looks like you're using a phone or tablet 📱. This website is not optimized for
