--- a/settings/index.html
+++ b/settings/index.html
@@ -32,6 +32,7 @@
             </h1>
             <nav>
                 <a href="../">Home</a>
+                <a href="../sound">Sounds</a>
                 <a href="../forums">Forums</a>
                 <a href="./settings">Settings</a>
             </nav>
