--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             </h1>
             <nav>
                 <a href="./">Home</a>
+                <a href="./sound">Sounds</a>
                 <a href="./forums">Forums</a>
                 <a href="./settings">Settings</a>
             </nav>
