--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-color-scheme="dark">
 
 <head>
     <meta charset="UTF-8">
@@ -32,7 +32,6 @@
             <nav>
                 <a href="./">Home</a>
                 <a href="./sound">Sounds</a>
-                <a href="./forums">Forums</a>
                 <a href="./settings">Settings</a>
             </nav>
         </header>
