--- a/forums/index.html
+++ b/forums/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-color-scheme="dark">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -8,8 +8,9 @@
     <title>NVSHS</title>
     <link rel="icon" href="" id="favicon">
 
-    <link rel="stylesheet" href="styles.css">
-    <script src="./index.js" defer></script>
+    <link rel="stylesheet" href="./styles.css">
+    <!-- <script src="./index.js" type="module" defer></script> -->
+    <script src="../index.js" defer></script>
 </head>
 
 <body>
@@ -30,40 +31,14 @@
                                         class="header-logo-white">.github.io</span></span></span></span></span></span>
             </h1>
             <nav>
-                <a href="./">Home</a>
-                <a href="./sound">Sounds</a>
+                <a href="../">Home</a>
+                <a href="../sound">Sounds</a>
                 <a href="./">Forums</a>
-                <a href="./settings">Settings</a>
+                <a href="../settings">Settings</a>
             </nav>
         </header>
         <div class="main">
-            <div class="main-vpns">
-                <div class="main-item">
-                    <h2>VPN Example</h2>
-                </div>
-            </div>
-            <div class="main-links">
-                <div class="main-item">
-                    <h2>Link Example</h2>
-                </div>
-            </div>
-            <div class="main-games">
-                <div class="main-item">
-                    <h2>Game Example</h2>
-                </div>
-                <div class="main-item">
-                    <h2>Game Example</h2>
-                </div>
-                <div class="main-item">
-                    <h2>Game Example</h2>
-                </div>
-                <div class="main-item">
-                    <h2>Game Example</h2>
-                </div>
-                <div class="main-item">
-                    <h2>Game Example</h2>
-                </div>
-            </div>
+            <h2>Coming soon to a website near you!</h2>
         </div>
     </div>
 </body>
