--- a/settings/index.html
+++ b/settings/index.html
@@ -33,6 +33,7 @@
             <nav>
                 <a href="../">Home</a>
                 <a href="../sound">Sounds</a>
+                <a href="../">Forums</a>
                 <a href="./settings">Settings</a>
             </nav>
         </header>
