--- a/sound/index.html
+++ b/sound/index.html
@@ -32,6 +32,7 @@
             <nav>
                 <a href="../">Home</a>
                 <a href="./">Sounds</a>
+                <a href="../">Forums</a>
                 <a href="../settings">Settings</a>
             </nav>
         </header>
