Fixed Settings error

--- a/forums/index.html
+++ b/forums/index.html
@@ -33,8 +33,8 @@
             <nav>
                 <a href="../">Home</a>
                 <a href="../sound">Sounds</a>
-                <a href="./">Forums</a>
-                <a href="../settings">Settings</a>
+                <a href="../forums">Forums</a>
+                <a href="./settings">Settings</a>
             </nav>
         </header>
         <div class="main">
