--- a/forums/index.html
+++ b/forums/index.html
@@ -55,6 +55,10 @@
             <h2>Coming soon to a website near you!</h2>
         </div>
     </div>
+    <footer>
+        <h3>© <a href="https://github.com/what-question-mark" target="_blank">what-question-mark</a> <span
+                id="year"></span></h3>
+    </footer>
 </body>
 
 </html>
