--- a/settings/index.html
+++ b/settings/index.html
@@ -84,6 +84,10 @@
             </details>
         </div>
     </div>
+    <footer>
+        <h3>© <a href="https://github.com/what-question-mark" target="_blank">what-question-mark</a> <span
+                id="year"></span></h3>
+    </footer>
 </body>
 
 </html>
