--- a/forums/index.html
+++ b/forums/index.html
@@ -13,7 +13,7 @@
     <script src="../index.js" defer></script>
 </head>
 
-<body>
+<body id="body">
     <a href="https://github.com/nvshs" class="github-corner" aria-label="View source on GitHub">
         <svg viewBox="0 0 250 250" style="position: absolute; top: 0; border: 0; right: 0;"
             aria-hidden="true">
