--- a/settings/index.html
+++ b/settings/index.html
@@ -13,7 +13,7 @@
     <script src="../index.js" defer></script>
 </head>
 
-<body>
+<body id="body">
     <a href="https://github.com/nvshs" class="github-corner" aria-label="View source on GitHub">
         <svg viewBox="0 0 250 250" style="position: absolute; top: 0; border: 0; right: 0;"
             aria-hidden="true">
@@ -46,7 +46,7 @@
                 <a href="../">Home</a>
                 <a href="../sound">Sounds</a>
                 <a href="../forums">Forums</a>
-                <a href="./settings">Settings</a>
+                <a href="./">Settings</a>
             </nav>
         </header>
         <div class="main">
@@ -58,11 +58,11 @@
                 </summary>
                 <h3>Title</h3>
                 <div class="settings-options-input">
-                    <input type="text" placeholder="Classroom" value="Classroom" id="title">
+                    <input type="text" placeholder="Classroom" value="Education Perfect" id="title">
                 </div>
                 <h3>Icon URL</h3>
                 <div class="settings-options-input">
-                    <input type="text" placeholder="Icon" value="https://ssl.gstatic.com/classroom/favicon.png"
+                    <input type="text" placeholder="Icon" value="https://nvshs.github.io/newsite/assets/ep.png"
                         id="icon">
                 </div>
                 <div class="settings-options-buttons">
