--- a/settings/index.html
+++ b/settings/index.html
@@ -62,7 +62,7 @@
                 </div>
                 <h3>Icon URL</h3>
                 <div class="settings-options-input">
-                    <input type="text" placeholder="Icon" value="https://nvshs.github.io/newsite/assets/ep.png"
+                    <input type="text" placeholder="Icon" value="https://nvshs.github.io/newsite/assets/ep.ico"
                         id="icon">
                 </div>
                 <div class="settings-options-buttons">
