LavaBoy and WaterGirl

--- a/games/watergirl-fireboy/index.html
+++ b/games/watergirl-fireboy/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-color-scheme="dark">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -8,11 +8,14 @@
     <title>NVSHS</title>
     <link rel="icon" href="" id="favicon">
 
-    <link rel="stylesheet" href="styles.css">
-    <script src="./index.js" defer></script>
+    <link rel="stylesheet" href="../styles.css">
+    <!-- <script src="./index.js" type="module" defer></script> -->
+    <script src="../../index.js" defer></script>
 </head>
 
 <body id="body">
+    <style>
+    </style>
     <div class="error">
         <h1>Hey...</h1>
         <p style="margin-top: 2em;">It looks like you're using a phone or tablet 📱. This website is not optimized for
@@ -42,29 +45,14 @@
                                         class="header-logo-white">.github.io</span></span></span></span></span></span>
             </h1>
             <nav>
-                <a href="./">Home</a>
-                <a href="./sound">Sounds</a>
-                <a href="./forums">Forums</a>
-                <a href="./settings">Settings</a>
+                <a href="../../">Home</a>
+                <a href="../../sound">Sounds</a>
+                <a href="../../forums">Forums</a>
+                <a href="../../settings">Settings</a>
             </nav>
         </header>
-        <section class="main">
-            <section id="vpns" class="main-vpns">
-                <div class="main-item">
-                    <h2>VPN Example</h2>
-                </div>
-            </section>
-            <section id="links" class="main-links">
-                <div class="main-item">
-                    <h2>Link Example</h2>
-                </div>
-            </section>
-            <section id="games" class="main-games">
-                <a class="main-item game" href="./games/watergirl-fireboy/">
-                    <img src="./games/assets/fireboy-watergirl.jpg" />
-                    <h2>Fireboy & Watergirl</h2>
-                </a>
-            </section>
+        <div class="main">
+            <iframe src="https://html5.gamedistribution.com/a55c9cc9c21e4fc683c8c6857f3d0c75/" scrolling="no"> </iframe>
         </div>
     </div>
     <footer>
