--- a/forums/index.html
+++ b/forums/index.html
@@ -26,7 +26,7 @@
             Developer)</p>
     </div>
     <div class="body">
-        <a href="https://github.com/nvshs" class="github-corner" aria-label="View source on GitHub">
+        <a href="https://github.com/nvshs" target="_blank" class="github-corner" aria-label="View source on GitHub">
             <svg viewBox="0 0 250 250" style="position: absolute; top: 0; border: 0; right: 0;"
                 aria-hidden="true">
                 <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
