--- a/settings/index.html
+++ b/settings/index.html
@@ -13,7 +13,7 @@
     <script src="../index.js" defer></script>
 </head>
 
-<body id="body">
+<body>
     <div class="error">
         <h1>Hey...</h1>
         <p style="margin-top: 2em;">It looks like you're using a phone or tablet 📱. This website is not optimized for
@@ -23,7 +23,7 @@
         <p style="margin-top: 2em;">- <a href="https://github.com/what-question-mark">@what-question-mark</a> (Lead
             Developer)</p>
     </div>
-    <div class="body">
+    <div class="body" id="body">
         <a href="https://github.com/nvshs" target="_blank" class="github-corner" aria-label="View source on GitHub">
             <svg viewBox="0 0 250 250" style="position: absolute; top: 0; border: 0; right: 0;"
                 aria-hidden="true">
