--- a/forums/index.html
+++ b/forums/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-color-scheme="dark">
 
 <head>
     <meta charset="UTF-8">
@@ -13,7 +13,7 @@
     <script src="../index.js" defer></script>
 </head>
 
-<body id="body">
+<body>
     <style>
     </style>
     <div class="error">
@@ -25,7 +25,7 @@
         <p style="margin-top: 2em;">- <a href="https://github.com/what-question-mark">@what-question-mark</a> (Lead
             Developer)</p>
     </div>
-    <div class="body">
+    <div class="body" id="body">
         <a href="https://github.com/nvshs" target="_blank" class="github-corner" aria-label="View source on GitHub">
             <svg viewBox="0 0 250 250" style="position: absolute; top: 0; border: 0; right: 0;"
                 aria-hidden="true">
