--- a/games/watergirl-fireboy/index.html
+++ b/games/watergirl-fireboy/index.html
@@ -13,7 +13,7 @@
     <script src="../../index.js" defer></script>
 </head>
 
-<body id="body">
+<body>
     <style>
     </style>
     <div class="error">
@@ -25,7 +25,7 @@
         <p style="margin-top: 2em;">- <a href="https://github.com/what-question-mark">@what-question-mark</a> (Lead
             Developer)</p>
     </div>
-    <div class="body">
+    <div class="body" id="body">
         <a href="https://github.com/nvshs" target="_blank" class="github-corner" aria-label="View source on GitHub">
             <svg viewBox="0 0 250 250" style="position: absolute; top: 0; border: 0; right: 0;"
                 aria-hidden="true">
@@ -52,7 +52,7 @@
             </nav>
         </header>
         <div class="main">
-            <iframe src="https://html5.gamedistribution.com/a55c9cc9c21e4fc683c8c6857f3d0c75/" scrolling="no"> </iframe>
+            <iframe src="" scrolling="no"> </iframe>
         </div>
     </div>
     <footer>
