--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="./index.js" defer></script>
 </head>
 
-<body id="body">
+<body>
     <div class="error">
         <h1>Hey...</h1>
         <p style="margin-top: 2em;">It looks like you're using a phone or tablet 📱. This website is not optimized for
@@ -22,10 +22,9 @@
         <p style="margin-top: 2em;">- <a href="https://github.com/what-question-mark">@what-question-mark</a> (Lead
             Developer)</p>
     </div>
-    <div class="body">
+    <div class="body" id="body">
         <a href="https://github.com/nvshs" target="_blank" class="github-corner" aria-label="View source on GitHub">
-            <svg viewBox="0 0 250 250" style="position: absolute; top: 0; border: 0; right: 0;"
-                aria-hidden="true">
+            <svg viewBox="0 0 250 250" style="position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
                 <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
                 <path
                     d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
@@ -50,14 +49,19 @@
         </header>
         <section class="main">
             <section id="vpns" class="main-vpns">
-                <div class="main-item">
-                    <h2>VPN Example</h2>
-                </div>
+                <a class="main-item" href="./downloads/psiphon@nvshs.exe">
+                    <h2>Psiphon 3</h2>
+                </a>
+            </section>
+            <section id="hacks" class="main-links">
+                <a class="main-item" href="./hacks/blooket/index.html">
+                   <h2>Blooket Hacks</h2>
+                </a>
             </section>
             <section id="links" class="main-links">
-                <div class="main-item">
+                <a class="main-item">
                     <h2>Link Example</h2>
-                </div>
+                </a>
             </section>
             <section id="games" class="main-games">
                 <a class="main-item game" href="./games/watergirl-fireboy/">
@@ -65,7 +69,7 @@
                     <h2>Fireboy & Watergirl</h2>
                 </a>
             </section>
-        </div>
+    </div>
     </div>
     <footer>
         <h3>© <a href="https://github.com/what-question-mark" target="_blank">what-question-mark</a> <span
