--- a/games/watergirl-fireboy/index.html
+++ b/games/watergirl-fireboy/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="" id="favicon">
 
     <link rel="stylesheet" href="../styles.css">
-    <!-- <script src="./index.js" type="module" defer></script> -->
+    <link rel="stylesheet" href="../../styles.css">
     <script src="../../index.js" defer></script>
 </head>
 
