--- a/hacks/blooket/index.html
+++ b/hacks/blooket/index.html
@@ -8,7 +8,7 @@
     <title>NVSHS</title>
     <link rel="icon" href="" id="favicon">
 
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../../styles.css">
     <!-- <script src="./index.js" type="module" defer></script> -->
     <script src="../../index.js" defer></script>
 </head>
@@ -63,7 +63,7 @@
             <br />
 
             <h1>More coming soon™</h1>
-            
+
             <br />
             
             <embed src="./code.js" style="width: 100%;height:60vh">
