--- a/hacks/pixal/index.html
+++ b/hacks/pixal/index.html
@@ -8,7 +8,7 @@
     <title>NVSHS</title>
     <link rel="icon" href="" id="favicon">
 
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../../styles.css">
     <!-- <script src="./index.js" type="module" defer></script> -->
     <script src="../../index.js" defer></script>
 </head>
@@ -59,7 +59,7 @@
             <li>Open <a href="https://chat.openai.com/" target="_blank">ChatGPT</a></li>
             <li>Paste the text below into a new chat</li>
             <li>Ask it "Write me a PIXAL paragraph about &lt;Paragraph topic&gt;"</li>
-            
+
             <br />
 
             <embed src="./text.txt" style="width: 100%;height:40vh">
