--- a/games/motox3m/embed/index.html
+++ b/games/motox3m/embed/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-color-scheme="dark">data-color-scheme="dark">
+<html lang="en" data-color-scheme="dark">
 
 <head>
   <meta charset="utf-8" />
