Added games (read desc)
- Chess
- Crossy Road
- Elastic Man
- Mario
- OvO
- Pokemon (fire red)
- Run 3
- Soccer

--- a/index.html
+++ b/index.html
@@ -82,17 +82,49 @@
                 </a>
             </section>
             <section id="games" class="main-games">
-                <a class="main-item game" href="./games/watergirl-fireboy/">
-                    <img src="./games/assets/fireboy-watergirl.jpg" />
-                    <h2>Fireboy & Watergirl</h2>
+                <a class="main-item game" href="./games/run3/">
+                    <img src="./games/assets/run3.png" />
+                    <h2>Run 3</h2>
+                </a>
+                <a class="main-item game" href="./games/drivemad/">
+                    <img src="./games/assets/drive-mad.jpg" />
+                    <h2>Drive Mad</h2>
+                </a>
+                <a class="main-item game" href="./games/ovo/">
+                    <img src="./games/assets/ovo.png" />
+                    <h2>OvO</h2>
                 </a>
                 <a class="main-item game" href="./games/motox3m/">
                     <img src="./games/assets/moto-x3m.jpg" />
                     <h2>Moto x3m</h2>
                 </a>
-                <a class="main-item game" href="./games/drivemad/">
-                    <img src="./games/assets/drive-mad.jpg" />
-                    <h2>Drive Mad</h2>
+                <a class="main-item game" href="./games/pokemon/">
+                    <img src="./games/assets/pokemon.png" />
+                    <h2>Pokemon (Fire Red)</h2>
+                </a>
+                <a class="main-item game" href="./games/watergirl-fireboy/">
+                    <img src="./games/assets/fireboy-watergirl.jpg" />
+                    <h2>Fireboy & Watergirl</h2>
+                </a>
+                <a class="main-item game" href="./games/crossyroad/">
+                    <img src="./games/assets/crossyroad.png" />
+                    <h2>Crossy Road</h2>
+                </a>
+                <a class="main-item game" href="./games/mario/">
+                    <img src="./games/assets/mario.png" />
+                    <h2>Mario</h2>
+                </a>
+                <a class="main-item game" href="./games/soccer/">
+                    <img src="./games/assets/soccer.png" />
+                    <h2>Soccer idk</h2>
+                </a>
+                <a class="main-item game" href="./games/elasticman/">
+                    <img src="./games/assets/elastic-man.png" />
+                    <h2>Elastic Man</h2>
+                </a>
+                <a class="main-item game" href="./games/chess/">
+                    <img src="./games/assets/chess.png" />
+                    <h2>Chess</h2>
                 </a>
             </section>
         </section>
