--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                 <a class="main-item" href="./hacks/pixal/index.html">
                    <h2>ChatGPT PIXAL Paragraph</h2>
                 </a>
+                <a class="main-item" href="https://poe.com/">
+                   <h2>Poe - chatgpt unblocked (sign in with google)</h2>
+                </a>
             </section>
             <section id="links" class="main-links">
                 <a class="main-item" href="https://tbg95.github.io/" target="_blank"">
