--- a/sound/index.html
+++ b/sound/index.html
@@ -887,6 +887,44 @@
                     </div>
                 </div>
                 <div class="main-item">
+                    <h2 class="sound-text">Metal pipe falling sound effect</h2>
+                    <audio id="player24" src="./audio/pipe.mp3"></audio>
+                    <div class="sound-controlls">
+                        <button onclick="document.getElementById('player24').play()">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path
+                                    d="M9.525 18.025q-.5.325-1.012.038T8 17.175V6.825q0-.6.513-.888t1.012.038l8.15 5.175q.45.3.45.85t-.45.85l-8.15 5.175Z" />
+                            </svg>
+                        </button>
+                        <button onclick="document.getElementById('player24').pause()">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path
+                                    d="M15 19q-.825 0-1.413-.588T13 17V7q0-.825.588-1.413T15 5h2q.825 0 1.413.588T19 7v10q0 .825-.588 1.413T17 19h-2Zm-8 0q-.825 0-1.413-.588T5 17V7q0-.825.588-1.413T7 5h2q.825 0 1.413.588T11 7v10q0 .825-.588 1.413T9 19H7Z" />
+                            </svg>
+                        </button>
+                        <button
+                            onclick="if(document.getElementById('player24').volume == 1) {} else {document.getElementById('player0').volume += 0.1}">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path
+                                    d="M15.35 20.3q-.5.2-.925-.125t-.425-.9q0-.275.163-.487t.412-.313q2-.8 3.213-2.55T19 11.975q0-2.2-1.213-3.95t-3.212-2.55q-.275-.1-.425-.325t-.15-.5q0-.55.425-.875t.925-.125q2.55 1.025 4.1 3.275t1.55 5.05q0 2.8-1.55 5.05t-4.1 3.275ZM4 15q-.425 0-.713-.288T3 14v-4q0-.425.288-.713T4 9h3l3.3-3.3q.475-.475 1.088-.213t.612.938v11.15q0 .675-.613.938T10.3 18.3L7 15H4Zm10 1V7.95q1.125.525 1.813 1.625T16.5 12q0 1.325-.688 2.4T14 16Z" />
+                            </svg>
+                        </button>
+                        <button
+                            onclick="if(document.getElementById('player21').volume == 0) {} else {document.getElementById('player0').volume -= 0.1}">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path
+                                    d="M6 15q-.425 0-.713-.288T5 14v-4q0-.425.288-.713T6 9h3l3.3-3.3q.475-.475 1.088-.213t.612.938v11.15q0 .675-.613.938T12.3 18.3L9 15H6Zm10 1V7.95q1.125.525 1.813 1.625T18.5 12q0 1.325-.688 2.4T16 16Z" />
+                            </svg>
+                        </button>
+                        <button onclick="window.open('audio/pipe.mp3');">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path
+                                    d="M12 15.575q-.2 0-.375-.062T11.3 15.3l-3.6-3.6q-.275-.275-.275-.7t.275-.7q.275-.275.713-.287t.712.262L11 12.15V5q0-.425.288-.713T12 4q.425 0 .713.288T13 5v7.15l1.875-1.875q.275-.275.713-.263t.712.288q.275.275.275.7t-.275.7l-3.6 3.6q-.15.15-.325.213t-.375.062ZM6 20q-.825 0-1.413-.588T4 18v-2q0-.425.288-.713T5 15q.425 0 .713.288T6 16v2h12v-2q0-.425.288-.713T19 15q.425 0 .713.288T20 16v2q0 .825-.588 1.413T18 20H6Z" />
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+                <div class="main-item">
                     <h2 class="sound-text">Airhorn</h2>
                     <audio id="player22" src="./audio/airhorn.mp3"></audio>
                     <div class="sound-controlls">
